--- a/hybrid/HybrydRS.ipynb
+++ b/hybrid/HybrydRS.ipynb
@@ -321,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [
     {
@@ -357,27 +357,27 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>0.000000</td>\n",
+       "      <td>0</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>146259</th>\n",
-       "      <td>0.000000</td>\n",
+       "      <td>0</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>146298</th>\n",
-       "      <td>0.000000</td>\n",
+       "      <td>0</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>146310</th>\n",
-       "      <td>0.000000</td>\n",
+       "      <td>0</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>146319</th>\n",
-       "      <td>10.000000</td>\n",
+       "      <td>10</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -387,28 +387,28 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>153662</th>\n",
-       "      <td>190.000000</td>\n",
+       "      <td>190</td>\n",
        "      <td>94</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>76352</th>\n",
-       "      <td>33.000000</td>\n",
+       "      <td>33</td>\n",
        "      <td>96</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>16795</th>\n",
-       "      <td>377.000000</td>\n",
+       "      <td>377</td>\n",
        "      <td>108</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>35859</th>\n",
-       "      <td>180.000000</td>\n",
+       "      <td>180</td>\n",
        "      <td>133</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>11676</th>\n",
-       "      <td>4386.251041</td>\n",
-       "      <td>999</td>\n",
+       "      <td>1507</td>\n",
+       "      <td>310</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -416,29 +416,30 @@
        "</div>"
       ],
       "text/plain": [
-       "              rating    c\n",
-       "user_id                  \n",
-       "2           0.000000    1\n",
-       "146259      0.000000    1\n",
-       "146298      0.000000    1\n",
-       "146310      0.000000    1\n",
-       "146319     10.000000    1\n",
-       "...              ...  ...\n",
-       "153662    190.000000   94\n",
-       "76352      33.000000   96\n",
-       "16795     377.000000  108\n",
-       "35859     180.000000  133\n",
-       "11676    4386.251041  999\n",
+       "         rating    c\n",
+       "user_id             \n",
+       "2             0    1\n",
+       "146259        0    1\n",
+       "146298        0    1\n",
+       "146310        0    1\n",
+       "146319       10    1\n",
+       "...         ...  ...\n",
+       "153662      190   94\n",
+       "76352        33   96\n",
+       "16795       377  108\n",
+       "35859       180  133\n",
+       "11676      1507  310\n",
        "\n",
        "[16695 rows x 2 columns]"
       ]
      },
-     "execution_count": 106,
+     "execution_count": 116,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "ratings = pd.read_csv('dataset/processed/FinalRatings.csv')[0:45000]\n",
     "ratings['c']=1\n",
     "ratings.groupby(['user_id']).sum().sort_values(by=['c'])"
    ]
