--- a/collaborative/SVD.ipynb
+++ b/collaborative/SVD.ipynb
@@ -8,8 +8,8 @@
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "from surprise import Reader, Dataset, SVD\n",
-    "from surprise.model_selection import GridSearchCV\n"
+    "from surprise import Reader, Dataset, SVD, KNNWithMeans\n",
+    "from surprise.model_selection import GridSearchCV, cross_validate"
    ]
   },
   {
@@ -35,8 +35,8 @@
     "        data = Dataset.load_from_df(temp_ratings[['user_id', 'book_id', 'rating']], reader)\n",
     "        trainset = data.build_full_trainset()\n",
     "        \n",
-    "        param_grid = {'n_epochs': [5, 10], 'lr_all': [0.002, 0.005], 'reg_all': [0.4, 0.6]}\n",
-    "        gs = GridSearchCV(SVD, param_grid, measures=['rmse', 'mae'], cv=3)\n",
+    "        param_grid = {'n_epochs': [10, 20], 'lr_all': [0.005, 0.01], 'reg_all': [0.2, 0.4, 0.6]}\n",
+    "        gs = GridSearchCV(SVD, param_grid, measures=['rmse', 'mae'], cv=5)\n",
     "\n",
     "        gs.fit(data)\n",
     "\n",
@@ -54,7 +54,7 @@
     "        \n",
     "        result = [ [p.uid, p.iid, p.est] for p in predictions if p.uid == user_id]\n",
     "        result = np.array(result)\n",
-    "        result_dict = {'uid': result[:,0], 'iid': result[:,1], 'est': result[:,2]}\n",
+    "        result_dict = {'user_id': result[:,0], 'book_id': result[:,1], 'rating': result[:,2]}\n",
     "        result_df = pd.DataFrame.from_dict(result_dict)\n",
     "\n",
     "        return result_df"
@@ -69,18 +69,139 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3.78137918061023\n",
-      "{'n_epochs': 10, 'lr_all': 0.005, 'reg_all': 0.4}\n"
+      "3.7558720386945663\n",
+      "{'n_epochs': 10, 'lr_all': 0.01, 'reg_all': 0.4}\n"
      ]
     }
    ],
    "source": [
-    "rec = collaborative(ratings, 276796)"
+    "user_id = 11676\n",
+    "rec = collaborative(ratings, user_id)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "user_ratings = rec.sort_values(by=['rating'], ascending=False)\n",
+    "final_data=pd.read_csv('dataset/FinalData.csv')\n",
+    "merged = pd.merge(user_ratings, final_data, on=['book_id','book_id'])\n",
+    "merged.to_csv('colab_filter_11676.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def compare_metric(ratings, metric):\n",
+    "        reader = Reader(rating_scale=(0, 10))\n",
+    "        temp_ratings = ratings\n",
+    "\n",
+    "        data = Dataset.load_from_df(temp_ratings[['user_id', 'book_id', 'rating']], reader)\n",
+    "        \n",
+    "        sim_options = {\n",
+    "            \"name\": metric,\n",
+    "            \"min_support\": 5,\n",
+    "            \"user_based\": True,\n",
+    "        }\n",
+    "        algo = KNNWithMeans(sim_options=sim_options)\n",
+    "        \n",
+    "        print(\"#########  \" + metric)\n",
+    "        validate = cross_validate(algo, data, measures=['RMSE', 'MAE'], cv=5, verbose=True)\n",
+    "\n",
+    "        return validate"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "#########  msd\n",
+      "Computing the msd similarity matrix...\n",
+      "Done computing similarity matrix.\n",
+      "Computing the msd similarity matrix...\n",
+      "Done computing similarity matrix.\n",
+      "Computing the msd similarity matrix...\n",
+      "Done computing similarity matrix.\n",
+      "Computing the msd similarity matrix...\n",
+      "Done computing similarity matrix.\n",
+      "Computing the msd similarity matrix...\n",
+      "Done computing similarity matrix.\n",
+      "Evaluating RMSE, MAE of algorithm KNNWithMeans on 5 split(s).\n",
+      "\n",
+      "                  Fold 1  Fold 2  Fold 3  Fold 4  Fold 5  Mean    Std     \n",
+      "RMSE (testset)    4.1305  4.2465  4.1213  4.1970  4.1121  4.1615  0.0520  \n",
+      "MAE (testset)     3.2668  3.3713  3.2688  3.3254  3.2541  3.2973  0.0445  \n",
+      "Fit time          4.34    4.50    4.40    4.41    4.36    4.40    0.05    \n",
+      "Test time         0.74    0.75    0.74    0.75    0.74    0.75    0.00    \n",
+      "#########  msd\n",
+      "Computing the msd similarity matrix...\n",
+      "Done computing similarity matrix.\n",
+      "Computing the msd similarity matrix...\n",
+      "Done computing similarity matrix.\n",
+      "Computing the msd similarity matrix...\n",
+      "Done computing similarity matrix.\n",
+      "Computing the msd similarity matrix...\n",
+      "Done computing similarity matrix.\n",
+      "Computing the msd similarity matrix...\n",
+      "Done computing similarity matrix.\n",
+      "Evaluating RMSE, MAE of algorithm KNNWithMeans on 5 split(s).\n",
+      "\n",
+      "                  Fold 1  Fold 2  Fold 3  Fold 4  Fold 5  Mean    Std     \n",
+      "RMSE (testset)    4.1403  4.1198  4.1703  4.1155  4.1488  4.1389  0.0200  \n",
+      "MAE (testset)     3.2747  3.2480  3.3098  3.2475  3.2820  3.2724  0.0233  \n",
+      "Fit time          4.35    4.42    4.35    4.38    4.42    4.38    0.03    \n",
+      "Test time         0.78    0.74    0.74    0.74    0.77    0.75    0.02    \n",
+      "#########  msd\n",
+      "Computing the msd similarity matrix...\n",
+      "Done computing similarity matrix.\n",
+      "Computing the msd similarity matrix...\n",
+      "Done computing similarity matrix.\n",
+      "Computing the msd similarity matrix...\n",
+      "Done computing similarity matrix.\n",
+      "Computing the msd similarity matrix...\n",
+      "Done computing similarity matrix.\n",
+      "Computing the msd similarity matrix...\n",
+      "Done computing similarity matrix.\n",
+      "Evaluating RMSE, MAE of algorithm KNNWithMeans on 5 split(s).\n",
+      "\n",
+      "                  Fold 1  Fold 2  Fold 3  Fold 4  Fold 5  Mean    Std     \n",
+      "RMSE (testset)    4.1483  4.0759  4.1728  4.1498  4.1225  4.1339  0.0331  \n",
+      "MAE (testset)     3.2768  3.2214  3.2964  3.2790  3.2547  3.2657  0.0258  \n",
+      "Fit time          4.63    4.53    4.41    4.41    4.35    4.47    0.10    \n",
+      "Test time         0.78    0.74    0.75    0.75    0.75    0.75    0.02    \n"
+     ]
+    }
+   ],
+   "source": [
+    "metrics = [\"msd\", \"cosine\", \"pearson\"]\n",
+    "rmse = []\n",
+    "mae = []\n",
+    "for m in metrics:\n",
+    "    metric_score = compare_metric(ratings, metrics[0])\n",
+    "    rmse.append(round(np.mean(metric_score['test_rmse']), 4))\n",
+    "    mae.append(round(np.mean(metric_score['test_mae']), 4))\n",
+    "\n",
+    "score_dict = {'metric': metrics, 'rmse': rmse, 'mae': mae}\n",
+    "score_df = pd.DataFrame.from_dict(score_dict)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -104,167 +225,48 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>uid</th>\n",
-       "      <th>iid</th>\n",
-       "      <th>est</th>\n",
+       "      <th>metric</th>\n",
+       "      <th>rmse</th>\n",
+       "      <th>mae</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>126</th>\n",
-       "      <td>276796</td>\n",
-       "      <td>0156528207</td>\n",
-       "      <td>5.094100090389718</td>\n",
+       "      <th>0</th>\n",
+       "      <td>msd</td>\n",
+       "      <td>4.1615</td>\n",
+       "      <td>3.2973</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>763</th>\n",
-       "      <td>276796</td>\n",
-       "      <td>2253007102</td>\n",
-       "      <td>4.80826739018412</td>\n",
+       "      <th>1</th>\n",
+       "      <td>cosine</td>\n",
+       "      <td>4.1389</td>\n",
+       "      <td>3.2724</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>446</th>\n",
-       "      <td>276796</td>\n",
-       "      <td>8433914545</td>\n",
-       "      <td>4.73124269586881</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>826</th>\n",
-       "      <td>276796</td>\n",
-       "      <td>0743222229</td>\n",
-       "      <td>4.691741838744048</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>248</th>\n",
-       "      <td>276796</td>\n",
-       "      <td>0446677450</td>\n",
-       "      <td>4.608296393104767</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>276796</td>\n",
-       "      <td>0385504209</td>\n",
-       "      <td>4.607729145596828</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>671</th>\n",
-       "      <td>276796</td>\n",
-       "      <td>0060558865</td>\n",
-       "      <td>4.577485036556086</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>240</th>\n",
-       "      <td>276796</td>\n",
-       "      <td>8445071408</td>\n",
-       "      <td>4.575356089173368</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>753</th>\n",
-       "      <td>276796</td>\n",
-       "      <td>193156146X</td>\n",
-       "      <td>4.542671102975697</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>468</th>\n",
-       "      <td>276796</td>\n",
-       "      <td>0590481371</td>\n",
-       "      <td>4.506124684934446</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>358</th>\n",
-       "      <td>276796</td>\n",
-       "      <td>0151008116</td>\n",
-       "      <td>4.5014235518915715</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>74</th>\n",
-       "      <td>276796</td>\n",
-       "      <td>0316769487</td>\n",
-       "      <td>4.476511379997623</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>394</th>\n",
-       "      <td>276796</td>\n",
-       "      <td>0451526341</td>\n",
-       "      <td>4.467340896189523</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>673</th>\n",
-       "      <td>276796</td>\n",
-       "      <td>0060938455</td>\n",
-       "      <td>4.438709852327407</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>915</th>\n",
-       "      <td>276796</td>\n",
-       "      <td>0440219078</td>\n",
-       "      <td>4.43859242872767</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>36</th>\n",
-       "      <td>276796</td>\n",
-       "      <td>0312195516</td>\n",
-       "      <td>4.428520177139627</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>276796</td>\n",
-       "      <td>0446310786</td>\n",
-       "      <td>4.428460735524811</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>58</th>\n",
-       "      <td>276796</td>\n",
-       "      <td>0786868716</td>\n",
-       "      <td>4.4247812080835764</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>85</th>\n",
-       "      <td>276796</td>\n",
-       "      <td>0375400117</td>\n",
-       "      <td>4.419150258304205</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>556</th>\n",
-       "      <td>276796</td>\n",
-       "      <td>014023828X</td>\n",
-       "      <td>4.413040537835243</td>\n",
+       "      <th>2</th>\n",
+       "      <td>pearson</td>\n",
+       "      <td>4.1339</td>\n",
+       "      <td>3.2657</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "        uid         iid                 est\n",
-       "126  276796  0156528207   5.094100090389718\n",
-       "763  276796  2253007102    4.80826739018412\n",
-       "446  276796  8433914545    4.73124269586881\n",
-       "826  276796  0743222229   4.691741838744048\n",
-       "248  276796  0446677450   4.608296393104767\n",
-       "6    276796  0385504209   4.607729145596828\n",
-       "671  276796  0060558865   4.577485036556086\n",
-       "240  276796  8445071408   4.575356089173368\n",
-       "753  276796  193156146X   4.542671102975697\n",
-       "468  276796  0590481371   4.506124684934446\n",
-       "358  276796  0151008116  4.5014235518915715\n",
-       "74   276796  0316769487   4.476511379997623\n",
-       "394  276796  0451526341   4.467340896189523\n",
-       "673  276796  0060938455   4.438709852327407\n",
-       "915  276796  0440219078    4.43859242872767\n",
-       "36   276796  0312195516   4.428520177139627\n",
-       "14   276796  0446310786   4.428460735524811\n",
-       "58   276796  0786868716  4.4247812080835764\n",
-       "85   276796  0375400117   4.419150258304205\n",
-       "556  276796  014023828X   4.413040537835243"
+       "    metric    rmse     mae\n",
+       "0      msd  4.1615  3.2973\n",
+       "1   cosine  4.1389  3.2724\n",
+       "2  pearson  4.1339  3.2657"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "rec.sort_values(by=['est'], ascending=False).head(20)"
+    "score_df"
    ]
   },
   {
