collaborative knn predictions

--- a/collaborative/SVD.ipynb
+++ b/collaborative/SVD.ipynb
@@ -271,6 +271,220 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def collaborative_knn(ratings, user_id):\n",
+    "\n",
+    "        reader = Reader(rating_scale=(0, 10))\n",
+    "        temp_ratings = ratings\n",
+    "\n",
+    "        data = Dataset.load_from_df(temp_ratings[['user_id', 'book_id', 'rating']], reader)\n",
+    "        trainset = data.build_full_trainset()\n",
+    "        \n",
+    "        sim_options = {\n",
+    "            \"name\": [\"msd\", \"cosine\"],\n",
+    "            \"min_support\": [3, 4, 5],\n",
+    "            \"user_based\": [False, True],\n",
+    "        }\n",
+    "\n",
+    "        param_grid = {\"sim_options\": sim_options}\n",
+    "        gs = GridSearchCV(KNNWithMeans, param_grid, measures=['rmse', 'mae'], cv=5)\n",
+    "\n",
+    "        gs.fit(data)\n",
+    "\n",
+    "        # best RMSE score\n",
+    "        print(gs.best_score['rmse'])\n",
+    "\n",
+    "        # combination of parameters that gave the best RMSE score\n",
+    "        print(gs.best_params['rmse'])\n",
+    "        \n",
+    "        algo = gs.best_estimator['rmse']\n",
+    "        algo.fit(trainset)\n",
+    "\n",
+    "        unknown_ratings = trainset.build_anti_testset()\n",
+    "        predictions = algo.test(unknown_ratings)\n",
+    "        \n",
+    "        result = [ [p.uid, p.iid, p.est] for p in predictions if p.uid == user_id]\n",
+    "        result = np.array(result)\n",
+    "        result_dict = {'user_id': result[:,0], 'book_id': result[:,1], 'rating': result[:,2]}\n",
+    "        result_df = pd.DataFrame.from_dict(result_dict)\n",
+    "\n",
+    "        return result_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Computing the msd similarity matrix...\n",
+      "Done computing similarity matrix.\n",
+      "Computing the msd similarity matrix...\n",
+      "Done computing similarity matrix.\n",
+      "Computing the msd similarity matrix...\n",
+      "Done computing similarity matrix.\n",
+      "Computing the msd similarity matrix...\n",
+      "Done computing similarity matrix.\n",
+      "Computing the msd similarity matrix...\n",
+      "Done computing similarity matrix.\n",
+      "Computing the msd similarity matrix...\n",
+      "Done computing similarity matrix.\n",
+      "Computing the msd similarity matrix...\n",
+      "Done computing similarity matrix.\n",
+      "Computing the msd similarity matrix...\n",
+      "Done computing similarity matrix.\n",
+      "Computing the msd similarity matrix...\n",
+      "Done computing similarity matrix.\n",
+      "Computing the msd similarity matrix...\n",
+      "Done computing similarity matrix.\n",
+      "Computing the msd similarity matrix...\n",
+      "Done computing similarity matrix.\n",
+      "Computing the msd similarity matrix...\n",
+      "Done computing similarity matrix.\n",
+      "Computing the msd similarity matrix...\n",
+      "Done computing similarity matrix.\n",
+      "Computing the msd similarity matrix...\n",
+      "Done computing similarity matrix.\n",
+      "Computing the msd similarity matrix...\n",
+      "Done computing similarity matrix.\n",
+      "Computing the msd similarity matrix...\n",
+      "Done computing similarity matrix.\n",
+      "Computing the msd similarity matrix...\n",
+      "Done computing similarity matrix.\n",
+      "Computing the msd similarity matrix...\n",
+      "Done computing similarity matrix.\n",
+      "Computing the msd similarity matrix...\n",
+      "Done computing similarity matrix.\n",
+      "Computing the msd similarity matrix...\n",
+      "Done computing similarity matrix.\n",
+      "Computing the msd similarity matrix...\n",
+      "Done computing similarity matrix.\n",
+      "Computing the msd similarity matrix...\n",
+      "Done computing similarity matrix.\n",
+      "Computing the msd similarity matrix...\n",
+      "Done computing similarity matrix.\n",
+      "Computing the msd similarity matrix...\n",
+      "Done computing similarity matrix.\n",
+      "Computing the msd similarity matrix...\n",
+      "Done computing similarity matrix.\n",
+      "Computing the msd similarity matrix...\n",
+      "Done computing similarity matrix.\n",
+      "Computing the msd similarity matrix...\n",
+      "Done computing similarity matrix.\n",
+      "Computing the msd similarity matrix...\n",
+      "Done computing similarity matrix.\n",
+      "Computing the msd similarity matrix...\n",
+      "Done computing similarity matrix.\n",
+      "Computing the msd similarity matrix...\n",
+      "Done computing similarity matrix.\n",
+      "Computing the cosine similarity matrix...\n",
+      "Done computing similarity matrix.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/dawid/venv/semester_3/lib/python3.6/site-packages/surprise/prediction_algorithms/algo_base.py:248: RuntimeWarning: invalid value encountered in double_scalars\n",
+      "  sim = construction_func[name](*args)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Computing the cosine similarity matrix...\n",
+      "Done computing similarity matrix.\n",
+      "Computing the cosine similarity matrix...\n",
+      "Done computing similarity matrix.\n",
+      "Computing the cosine similarity matrix...\n",
+      "Done computing similarity matrix.\n",
+      "Computing the cosine similarity matrix...\n",
+      "Done computing similarity matrix.\n",
+      "Computing the cosine similarity matrix...\n",
+      "Done computing similarity matrix.\n",
+      "Computing the cosine similarity matrix...\n",
+      "Done computing similarity matrix.\n",
+      "Computing the cosine similarity matrix...\n",
+      "Done computing similarity matrix.\n",
+      "Computing the cosine similarity matrix...\n",
+      "Done computing similarity matrix.\n",
+      "Computing the cosine similarity matrix...\n",
+      "Done computing similarity matrix.\n",
+      "Computing the cosine similarity matrix...\n",
+      "Done computing similarity matrix.\n",
+      "Computing the cosine similarity matrix...\n",
+      "Done computing similarity matrix.\n",
+      "Computing the cosine similarity matrix...\n",
+      "Done computing similarity matrix.\n",
+      "Computing the cosine similarity matrix...\n",
+      "Done computing similarity matrix.\n",
+      "Computing the cosine similarity matrix...\n",
+      "Done computing similarity matrix.\n",
+      "Computing the cosine similarity matrix...\n",
+      "Done computing similarity matrix.\n",
+      "Computing the cosine similarity matrix...\n",
+      "Done computing similarity matrix.\n",
+      "Computing the cosine similarity matrix...\n",
+      "Done computing similarity matrix.\n",
+      "Computing the cosine similarity matrix...\n",
+      "Done computing similarity matrix.\n",
+      "Computing the cosine similarity matrix...\n",
+      "Done computing similarity matrix.\n",
+      "Computing the cosine similarity matrix...\n",
+      "Done computing similarity matrix.\n",
+      "Computing the cosine similarity matrix...\n",
+      "Done computing similarity matrix.\n",
+      "Computing the cosine similarity matrix...\n",
+      "Done computing similarity matrix.\n",
+      "Computing the cosine similarity matrix...\n",
+      "Done computing similarity matrix.\n",
+      "Computing the cosine similarity matrix...\n",
+      "Done computing similarity matrix.\n",
+      "Computing the cosine similarity matrix...\n",
+      "Done computing similarity matrix.\n",
+      "Computing the cosine similarity matrix...\n",
+      "Done computing similarity matrix.\n",
+      "Computing the cosine similarity matrix...\n",
+      "Done computing similarity matrix.\n",
+      "Computing the cosine similarity matrix...\n",
+      "Done computing similarity matrix.\n",
+      "Computing the cosine similarity matrix...\n",
+      "Done computing similarity matrix.\n",
+      "4.054333477840126\n",
+      "{'sim_options': {'name': 'cosine', 'min_support': 4, 'user_based': False}}\n",
+      "Computing the cosine similarity matrix...\n",
+      "Done computing similarity matrix.\n"
+     ]
+    }
+   ],
+   "source": [
+    "user_id = 11676\n",
+    "rec_knn = collaborative_knn(ratings, user_id)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "user_ratings = rec_knn.sort_values(by=['rating'], ascending=False)\n",
+    "final_data=pd.read_csv('dataset/FinalData.csv')\n",
+    "merged = pd.merge(user_ratings, final_data, on=['book_id','book_id'])\n",
+    "merged.to_csv('colab_filter_knn_11676.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
